--- a/react router dom v6/package.json
+++ b/react router dom v6/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "react-router-dom-v6",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
