feat: completed the prevent page leave feature using popstate event

--- a/using_popstate_event/package.json
+++ b/using_popstate_event/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-dom-v6",
+  "name": "using popstate event",
   "private": true,
   "version": "0.0.0",
   "type": "module",
