--- a/using_history_library/package.json
+++ b/using_history_library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-dom-v6",
+  "name": "using history library",
   "private": true,
   "version": "0.0.0",
   "type": "module",
