--- a/using_unstable_useBlocker/package.json
+++ b/using_unstable_useBlocker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-dom-v6",
+  "name": "uisng unstable useBlocker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
